Header section done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
     <title>Abstract</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="header">
+            <div class="header-logo">
+                <h4>Abstract</h4>
+                <h4 class="help">Help Center</h4>
+            </div>
+
+            <div class="header-button">
+                <button class="submit-btn">
+                    Submit a request
+                </button>
+
+                <button class="sign-btn">
+                    Sign in
+                </button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
