Search section done

--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
                 </button>
             </div>
         </div>
+
+        <div class="search">
+            <div class="search-title">
+                How can we help?
+            </div>
+
+            <div class="search-bar">
+                <input type="search" name="" id="" placeholder="Search">
+            </div>
+        </div>
     </div>
 </body>
 </html>
