Footer section added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <title>Abstract</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="container">
@@ -155,6 +156,76 @@
                         </div>
                     </div>
                 </div>
+        </div>
+
+        <div class="footer">
+            <div class="footer-abstract">
+                <h2>Abstract</h2>
+
+                <ul>
+                    <li><a href="">Start Trial</a></li>
+                    <li><a href="">Pricing</a></li>
+                    <li><a href="">Download</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-resources">
+                <h2>Resources</h2>
+
+                <ul>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Help Center</a></li>
+                    <li><a href="">Release Notes</a></li>
+                    <li><a href="">Status</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-community">
+                <h2>Community</h2>
+
+                <ul>
+                    <li><a href="">Twitter</a></li>
+                    <li><a href="">LinkedIn</a></li>
+                    <li><a href="">Facebook</a></li>
+                    <li><a href="">Dribbble</a></li>
+                    <li><a href="">Podcast</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-company">
+                <h2>Company</h2>
+
+                <ul>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Careers</a></li>
+                    <li><a href="">Legal</a></li>
+                </ul>
+
+                <div class="company-contact">
+                    <h3>Contact Us</h3>
+
+                    <ul>
+                        <li><a href="">info@abstract.com</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="footer-copyrights">
+                <div class="copyrights-empty">
+
+                </div>
+
+                <div class="copyright-content">
+                    <div class="content-logo">
+                        <i class="fa-solid fa-magnet"></i>
+                    </div>
+
+                    <p>© Copyright 2023</p>
+                    <p>Abstract Studio Design, Inc.</p>
+                    <p>All rights reserved</p>
+                </div>
+                               
+            </div>
         </div>
     </div>
 </body>
